Added a dot at end of titles

--- a/themes/h1/layouts/_default/list.html
+++ b/themes/h1/layouts/_default/list.html
@@ -4,7 +4,7 @@
 
 {{ define "main" }}
 	<main class="site-main section-inner thin animated fadeIn faster">
-		<h1>{{ .Title }}</h1>
+		<h1>{{ .Title }}<span class="accent">.</span></h1>
 		{{- if .Content }}
 		<div class="content">
 			{{ .Content }}
