--- a/themes/h1/layouts/index.html
+++ b/themes/h1/layouts/index.html
@@ -14,7 +14,7 @@
 	{{- end }}
 	<div id="spotlight" class="animated fadeIn">
 		<div id="home-center">
-			<h1 id="home-title">{{ .Site.Title }}</h1>
+			<h1 id="home-title">{{ .Site.Title }}<span class="accent">.</span></h1>
 			{{- with .Site.Params.homeSubtitle }}
 			<p id="home-subtitle">{{.}}</p>
 			{{- end }}
