--- a/themes/h1/layouts/partials/header.html
+++ b/themes/h1/layouts/partials/header.html
@@ -2,7 +2,7 @@
 		<div class="hdr-wrapper section-inner">
 			<div class="hdr-left">
 				<div class="site-branding">
-					<a href="{{.Site.BaseURL}}">{{ .Site.Title }}</a>
+					<a href="{{.Site.BaseURL}}">{{ .Site.Title }}<span class="accent">.</span></a>
 				</div>
 				<nav class="site-nav hide-in-mobile">
 					{{ partialCached "menu.html" . }}
