Adding kasargod trip notes

--- a/themes/h1/assets/scss/_predefined.scss
+++ b/themes/h1/assets/scss/_predefined.scss
@@ -1,11 +1,12 @@
 // Colors
 //
-$theme: #ec3535;
-$text: #e8eef2;
+$theme: #adff2f;
+$text: #000000;
 $light-grey: #191919;
-$dark-grey: #3B3E48;
+$dark-grey: #000000;
 $highlight-grey: #7d828a;
 $midnightblue: #2c3e50;
+$light-white: #ffffff;
 
 // Fonts
 //
